# hybrid-kalman-filter

./: .gitignore  initial_states.npy  measurements.npy  reference_outputs.npy  run_tests.sh
python/: benchmark.py  convert_output.py  plot_benchmark.py  reference_filter.py  verify.py
src/: CMakeLists.txt
src/hscheduler/: CMakeLists.txt  hscheduler.cpp  hscheduler.hpp
src/kf-gpu/: CMakeLists.txt  common.hpp  kfgpu.cu  main.cu  run_verify.sh
src/kf-gpu/include/: gpuint.hpp
src/kf-local/: CMakeLists.txt  kfcpu.cpp  main.cpp  mainP.cpp  minicomp.py
src/kf-local/include/: kfcpu.hpp
